# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md
day-02/src/: main.rs
day-03/src/: main.rs
day-04/: Cargo.toml  example2.txt
day-04/src/: main.rs  part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: benchmarks.rs
day-05/src/: lib.rs  main.rs  parser.rs  part1.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmarks.rs
day-06/src/: board.rs  lib.rs  main.rs  part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks.rs
day-07/src/: main.rs  part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks.rs
day-08/src/: lib.rs  main.rs  part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks.rs
day-09/src/: main.rs  part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmarks.rs
day-10/src/: lib.rs  main.rs  part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks.rs
day-11/src/: main.rs  part1.rs  part2.rs
day-12/benches/: benchmarks.rs
day-12/src/: main.rs  part1.rs  part2.rs
day-13/: Cargo.toml
day-13/benches/: benchmarks.rs
day-13/src/: lib.rs  machine.rs  main.rs  part1.rs  part2.rs
day-14/: Cargo.toml
day-14/benches/: benchmarks.rs
day-14/src/: lib.rs  main.rs  part1.rs  part2.rs  robot.rs
day-15/: Cargo.toml
day-15/benches/: benchmarks.rs
day-15/src/: lib.rs  main.rs  part1.rs  part2.rs
day-16/: Cargo.toml
day-16/benches/: benchmarks.rs
day-16/src/: lib.rs  main.rs  part1.rs  part2.rs
day-17/: Cargo.toml
day-17/benches/: benchmarks.rs
day-17/src/: lib.rs  main.rs  part1.rs  part2.rs
day-18/: Cargo.toml  bench.txt
day-18/benches/: benchmarks.rs
day-18/src/: lib.rs  main.rs  (+2 more)
day-19/: Cargo.toml  bench.txt
day-19/benches/: benchmarks.rs
day-19/src/: lib.rs  main.rs  part1.rs  part2.rs
day-20/: Cargo.toml
day-21/: Cargo.toml
day-22/: Cargo.toml
day-23/: Cargo.toml  bench.txt
day-24/: Cargo.toml  solution.md
dec1/: main.go  main.py
multilang-day01/: main.py
template-day/: Cargo.toml
(+26 files in other folders)
