[workspace]
members = ["day-*"]
resolver = "2"

[workspace.dependencies]
glam = "0.29.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
divan = "0.1.16"
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
miette = { version = "7.4", features = ["fancy"] }