[package]
name = "day-11"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
divan.workspace = true
test-log.workspace = true
miette.workspace = true
num-traits = "0.2.19"

[[bench]]
name = "day-11"
path = "benches/benchmarks.rs"
harness = false
