[package]
name = "day-13"
version = "0.1.0"
edition = "2021"

[dependencies]
glam.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
itertools.workspace = true
pathfinding = "4.12.0"


[dev-dependencies]
divan.workspace = true
test-log.workspace = true

[[bench]]
name = "day-13-bench"
path = "benches/benchmarks.rs"
harness = false
