[package]
name = "day-19"
version = "0.1.0"
edition = "2021"

[dependencies]
glam.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
rayon.workspace = true
pathfinding = "4.12.0"
cached = "0.54.0"

[dev-dependencies]
divan.workspace = true
test-log.workspace = true

[[bench]]
name = "day-19-bench"
path = "benches/benchmarks.rs"
harness = false
